[gd_scene load_steps=16 format=2]

[ext_resource path="res://Font/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scn/Scripts/Home.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 64
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 35
font_data = ExtResource( 1 )

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
light_mask = 513
margin_right = 720.0
margin_bottom = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Solde" type="Panel" parent="."]
margin_left = 64.0
margin_top = 72.0
margin_right = 640.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="Label" parent="Solde"]
margin_top = 64.0
margin_right = 576.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "EUR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Solde"]
margin_top = -40.0
margin_right = 576.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Solde Actuelle"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fast Expense" type="Panel" parent="."]
margin_left = 64.0
margin_top = 320.0
margin_right = 640.0
margin_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Amount" type="SpinBox" parent="Fast Expense"]
margin_left = 40.0
margin_top = 64.0
margin_right = 264.0
margin_bottom = 144.0
theme = SubResource( 4 )
max_value = 9999.0
step = 0.0
align = 1
suffix = "EUR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="Fast Expense"]
margin_left = 376.0
margin_top = 72.0
margin_right = 448.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 5 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Fast Expense"]
margin_top = -32.0
margin_right = 576.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 6 )
text = "Dépense Rapide"
align = 1
valign = 1

[node name="History" type="Panel" parent="."]
margin_left = 64.0
margin_top = 768.0
margin_right = 648.0
margin_bottom = 1144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="History"]
margin_left = 16.0
margin_top = 24.0
margin_right = 568.0
margin_bottom = 352.0
theme = SubResource( 8 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="History"]
margin_left = 144.0
margin_top = -40.0
margin_right = 433.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 9 )
text = "Historique"
align = 1
valign = 1

[node name="Option" type="Panel" parent="."]
margin_top = 1216.0
margin_right = 720.0
margin_bottom = 1280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearAll" type="Button" parent="Option"]
margin_left = 13.0
margin_top = 13.0
margin_right = 213.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 10 )
text = "Effacer la sauvegarde"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="Option"]
margin_left = 504.0
margin_top = 13.0
margin_right = 704.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 13 )
text = "A propos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeScn" type="Button" parent="."]
margin_left = 64.0
margin_top = 544.0
margin_right = 640.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 11 )
text = "Recette"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpenseScn" type="Button" parent="."]
margin_left = 64.0
margin_top = 640.0
margin_right = 640.0
margin_bottom = 704.0
custom_fonts/font = SubResource( 12 )
text = "Dépense"
[connection signal="pressed" from="Fast Expense/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Option/ClearAll" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Option/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="RecipeScn" to="." method="_on_RecipeScn_pressed"]
[connection signal="pressed" from="ExpenseScn" to="." method="_on_ExpenseScn_pressed"]
